# LAM

./: .gitignore  CONTEXT.md  LICENSE  Makefile  README.md  README.zh-CN.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs  tray.rs
apps/desktop/src-tauri/src/adapters/codex/: mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/services/: account.rs  antigravity.rs  core.rs  error.rs  mod.rs  provider.rs  quota.rs  relay.rs  runtime.rs  session.rs  sync.rs  types.rs  usage.rs
apps/desktop/src-tauri/tests/: integration_pat_accounts.rs  integration_pat_auth.rs  phase1_core.rs
docs/: 01-product-design.md  02-development-design.md  03-security-and-data-safety.md  04-roadmap.md  05-tauri-command-contracts.md  06-v0.2-remote-api-provider-design.md  CORRECTION-PLAN.md  DESIGN_GOAL.md  DESKTOP-RUNTIME.md  FINAL-DESIGN.md  IMPLEMENTATION-ISSUES.md  PHASE1-ACCEPTANCE.md  TAURI2_RUST_CODEX_RESET_EXPIRY_AND_QUOTA_RESET.md  TODO.md  codex_sqlite_event_sourcing_hybrid.md  codex_usage_tracker_jsonl_rust_rearchitecture_spec.md  todo-account-renewal-notes.md  todo-account-session-ui-density.md  todo-codex-app-server-path-compat.md  todo-concurrent-quota-refresh-feedback.md  todo-desktop-app-delivery.md  todo-display-plan-type.md  todo-dmg-launch-tray-fix.md  todo-dmg-open-quota-refresh-fix.md  todo-dmg-overview-test-props.md  todo-dmg-quota-runtime-path.md  todo-fix-tray-popover-desktop.md  todo-handoff-selected-session.md  (+33 more)
(+112 files in other folders)
