[package]
name = "localagentmanager-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "localagentmanager"

[lib]
name = "localagentmanager_core"
path = "src/lib.rs"

[[bin]]
name = "lam-core"
path = "src/bin/lam-core.rs"

[[bin]]
name = "localagentmanager"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-quartz-core = "0.3.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
image = "0.25"
tauri-build = { version = "2", features = [] }
